@@ -53,6 +53,8 @@ us a note on ns-developers mailing list.</p>
 <hr>
 <h1>Changes from ns-3.28 to ns-3-dev</h1>
 <h2>New API:</h2>
+  <li> Added CommandLine::Parse (const std::vector<std::string>> args) </li>
+  <li> NS_LOG_FUNCTION can now log the contents of vectors </li>
 <ul>
 </ul>
 <h2>Changes to existing API:</h2>
